--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ Assets/UnitilsApps.meta
 Assets/Plugins/
 Assets/Plugins.meta
 
+Assets/Resources/
+Assets/Resources.meta
+
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
